--- a/src/App.scss
+++ b/src/App.scss
@@ -90,6 +90,9 @@ a.button-black {
   }
 }
 
+.toaster {
+  width: 90%;
+}
 .hero-section {
   width: 100%;
   height: 653px;
@@ -105,6 +108,7 @@ a.button-black {
 
   &__intro {
     width: 35.5%;
+    height: 100%;
     padding: 73px 77px 80px 0;
     position: absolute;
     z-index: 1;
@@ -202,11 +206,6 @@ a.button-black {
     margin-bottom: 48px;
     line-height: 1.5;
   }
-}
-
-.slide {
-  display: flex;
-  flex-direction: row;
 }
 
 .offers {
@@ -314,7 +313,7 @@ a.button-black {
 }
 
 footer {
-  max-width: 1440px;
+  max-width: 100vw;
   height: 88px;
   padding: 0 72px;
   margin: 100px auto 0;
