authorization user to edit mode

--- a/src/App.scss
+++ b/src/App.scss
@@ -154,7 +154,7 @@ a.button-black {
 
   textarea {
     border: none;
-    resize: none;
+    wrap-option: soft;
     //border-bottom: 2px solid blue;
     width: 100%;
 
